# OSM-Route-Planner

./: CMakeLists.txt  README.md
src/: main.cpp  route_model.cpp  route_planner.cpp
test/: utest_rp_a_star_search.cpp
